<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prusia"
    tools:context=".NuevaTareaActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/categoria"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/prioridad"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/spCategoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:entries="@array/categoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <Spinner
        android:id="@+id/spPrioridad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:entries="@array/prioridad"
        app:layout_constraintEnd_toEndOf="@+id/spCategoria"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/estado"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/spEstado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:entries="@array/estado"
        app:layout_constraintEnd_toEndOf="@+id/spPrioridad"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tecnico"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/etTecnico"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/vacio"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="@+id/spEstado"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/brevedes"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintStart_toStartOf="@+id/etTecnico"
        app:layout_constraintTop_toBottomOf="@+id/etTecnico" />

    <EditText
        android:id="@+id/etResumen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/vacio"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="@+id/etTecnico"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/descrtipcion"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintStart_toStartOf="@+id/etResumen"
        app:layout_constraintTop_toBottomOf="@+id/etResumen" />

    <EditText
        android:id="@+id/etmDescripcion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etResumen"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:textColor="@android:color/holo_blue_dark"
        android:autofillHints="" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ImageView
        android:id="@+id/ivEstadoAb"
        android:layout_width="34dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/estado"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@mipmap/ic_abierta" />

    <ImageView
        android:id="@+id/ivEstadoEC"
        android:layout_width="34dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/estado"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@mipmap/ic_en_curso" />

    <ImageView
        android:id="@+id/ivEstadoTe"
        android:layout_width="34dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/estado"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@mipmap/ic_terminada" />
</androidx.constraintlayout.widget.ConstraintLayout>